// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mykeels/mee-karaoke components/SongPicker Index 1`] = `
<div
  className="block h-screen w-screen title-creator px-16 py-8"
>
  <div
    className="flex w-full h-full items-center justify-center py-4 px-8 bg-purple-200 opacity-75"
  >
    <div
      className="flex w-full h-full text-white"
    >
      <div
        className="flex flex-col h-full w-5/6 py-8 px-4 overflow-auto song-picker-scroller"
      >
        <div
          className="flex w-full"
        >
          <button
            className="inline-block w-10/12 text-left bg-purple-100 bg-opacity-75 p-4 my-4 text-lg border border-purple-100 hover:border-white"
            onClick={[Function]}
          >
            <div
              className="block w-full text-right text-sm"
            >
              4 years ago
            </div>
            <div
              className="block w-full"
            >
              1
              . 
              Hello World
            </div>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
        <div
          className="flex w-full"
        >
          <button
            className="inline-block w-10/12 text-left bg-purple-100 bg-opacity-75 p-4 my-4 text-lg border border-purple-100 hover:border-white"
            onClick={[Function]}
          >
            <div
              className="block w-full text-right text-sm"
            >
              4 years ago
            </div>
            <div
              className="block w-full"
            >
              2
              . 
              Hello World
            </div>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
        <div
          className="flex w-full"
        >
          <button
            className="inline-block w-10/12 text-left bg-purple-100 bg-opacity-75 p-4 my-4 text-lg border border-purple-100 hover:border-white"
            onClick={[Function]}
          >
            <div
              className="block w-full text-right text-sm"
            >
              4 years ago
            </div>
            <div
              className="block w-full"
            >
              3
              . 
              Hello World
            </div>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
        <div
          className="flex w-full"
        >
          <button
            className="inline-block w-10/12 text-left bg-purple-100 bg-opacity-75 p-4 my-4 text-lg border border-purple-100 hover:border-white"
            onClick={[Function]}
          >
            <div
              className="block w-full text-right text-sm"
            >
              4 years ago
            </div>
            <div
              className="block w-full"
            >
              4
              . 
              Hello World
            </div>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
        <div
          className="flex w-full"
        >
          <button
            className="inline-block w-10/12 text-left bg-purple-100 bg-opacity-75 p-4 my-4 text-lg border border-purple-100 hover:border-white"
            onClick={[Function]}
          >
            <div
              className="block w-full text-right text-sm"
            >
              4 years ago
            </div>
            <div
              className="block w-full"
            >
              5
              . 
              Hello World
            </div>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
        <div
          className="flex w-full"
        >
          <button
            className="inline-block w-10/12 text-left bg-purple-100 bg-opacity-75 p-4 my-4 text-lg border border-purple-100 hover:border-white"
            onClick={[Function]}
          >
            <div
              className="block w-full text-right text-sm"
            >
              4 years ago
            </div>
            <div
              className="block w-full"
            >
              6
              . 
              Hello World
            </div>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
        <div
          className="flex w-full"
        >
          <button
            className="inline-block w-10/12 text-left bg-purple-100 bg-opacity-75 p-4 my-4 text-lg border border-purple-100 hover:border-white"
            onClick={[Function]}
          >
            <div
              className="block w-full text-right text-sm"
            >
              4 years ago
            </div>
            <div
              className="block w-full"
            >
              7
              . 
              Hello World
            </div>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
        <div
          className="flex w-full"
        >
          <button
            className="inline-block w-10/12 text-left bg-purple-100 bg-opacity-75 p-4 my-4 text-lg border border-purple-100 hover:border-white"
            onClick={[Function]}
          >
            <div
              className="block w-full text-right text-sm"
            >
              4 years ago
            </div>
            <div
              className="block w-full"
            >
              8
              . 
              Hello World
            </div>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="flex h-full w-1/6 justify-center items-center px-2"
      >
        <button
          className="bg-purple-100 px-4 py-4 text-lg border border-purple-100 hover:border-white"
          onClick={[Function]}
        >
          New Song
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`@mykeels/mee-karaoke components/SongPicker Only 3 Records 1`] = `
<div
  className="block h-screen w-screen title-creator px-16 py-8"
>
  <div
    className="flex w-full h-full items-center justify-center py-4 px-8 bg-purple-200 opacity-75"
  >
    <div
      className="flex w-full h-full text-white"
    >
      <div
        className="flex flex-col h-full w-5/6 py-8 px-4 overflow-auto song-picker-scroller justify-center items-center "
      >
        <div
          className="flex w-full"
        >
          <button
            className="inline-block w-10/12 text-left bg-purple-100 bg-opacity-75 p-4 my-4 text-lg border border-purple-100 hover:border-white"
            onClick={[Function]}
          >
            <div
              className="block w-full text-right text-sm"
            >
              4 years ago
            </div>
            <div
              className="block w-full"
            >
              1
              . 
              Hello World
            </div>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
        <div
          className="flex w-full"
        >
          <button
            className="inline-block w-10/12 text-left bg-purple-100 bg-opacity-75 p-4 my-4 text-lg border border-purple-100 hover:border-white"
            onClick={[Function]}
          >
            <div
              className="block w-full text-right text-sm"
            >
              4 years ago
            </div>
            <div
              className="block w-full"
            >
              2
              . 
              Hello World
            </div>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
          <button
            className="flex w-1/12 justify-center items-center text-center my-4 mx-1 text-purple-200 bg-pink border border-pink hover:border-purple-100"
            onClick={[Function]}
          >
            <svg
              className="w-6 h-6"
              fill="none"
              stroke="currentColor"
              strokeWidth="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="flex h-full w-1/6 justify-center items-center px-2"
      >
        <button
          className="bg-purple-100 px-4 py-4 text-lg border border-purple-100 hover:border-white"
          onClick={[Function]}
        >
          New Song
        </button>
      </div>
    </div>
  </div>
</div>
`;
